change data-color-scheme to data-theme to match original django admin implementation to ensure better support of dark mode for external packages

--- a/src/django_smartbase_admin/static/sb_admin/src/css/_colors.css
+++ b/src/django_smartbase_admin/static/sb_admin/src/css/_colors.css
@@ -175,7 +175,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    html:not([data-color-scheme="light"]) {
+    html:not([data-theme="light"]) {
         @extend .dark-style;
         .tabulator .tabulator-header {
             @apply bg-light-a/50;
@@ -208,7 +208,7 @@
     }
 }
 
-html[data-color-scheme="dark"] {
+html[data-theme="dark"] {
     @extend .dark-style;
 
     .tabulator .tabulator-header {
